updated readme and added bulma

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Ipsum</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+    <link rel='stylesheet' type='text/css' media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
 <body>
